gcc/testsuite/rust/rustc/ui/parser/pat-lt-bracket-5.rs
fn main() {
    let v[0] = v[1]; // { dg-error "" "" { target *-*-* } }
}

